--- a/수박게임(beta)/index.html
+++ b/수박게임(beta)/index.html
@@ -1,225 +1,184 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8" />
-  <title>수박 게임 🍉</title>
-  <style>
-    body {
-      margin: 0;
-      overflow: hidden;
-      background: #fffbe6;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      font-family: sans-serif;
-      user-select: none;
-    }
-    canvas {
-      background: #fef3c7;
-      border: 5px solid #fcd34d;
-      border-radius: 10px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.2);
-    }
-    #startBtn {
-      position: absolute;
-      padding: 10px 28px;
-      font-size: 20px;
-      background: #fcd34d;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: 0.2s;
-    }
-    #startBtn:hover { background: #fde047; }
-    #scoreboard {
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      font-size: 18px;
-      background: rgba(255,255,255,0.6);
-      padding: 8px 12px;
-      border-radius: 6px;
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>레몬 게임 🍋</title>
+<style>
+  body {
+    margin: 0;
+    background: linear-gradient(to bottom, #c9f2ff, #fff);
+    overflow: hidden;
+    font-family: "Pretendard", sans-serif;
+  }
+  canvas {
+    display: block;
+    margin: 0 auto;
+    background: #e0f7fa;
+    border: 4px solid #333;
+    border-radius: 10px;
+  }
+  #ui {
+    position: absolute;
+    top: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    color: #333;
+    text-align: center;
+    font-weight: 600;
+  }
+  #score { font-size: 22px; }
+  #highscore { font-size: 16px; opacity: 0.7; }
+</style>
 </head>
 <body>
-  <button id="startBtn">🍉 게임 시작</button>
-  <div id="scoreboard">점수: 0<br>최고점수: 0</div>
-  <canvas id="gameCanvas" width="400" height="600"></canvas>
+<div id="ui">
+  <div id="score">점수: 0</div>
+  <div id="highscore">최고 점수: 0</div>
+</div>
+<canvas id="game" width="400" height="600"></canvas>
+<script>
+const canvas = document.getElementById("game");
+const ctx = canvas.getContext("2d");
 
-  <script>
-    const canvas = document.getElementById("gameCanvas");
-    const ctx = canvas.getContext("2d");
-    const startBtn = document.getElementById("startBtn");
-    const scoreboard = document.getElementById("scoreboard");
+let score = 0;
+let highScore = localStorage.getItem("highScore") || 0;
+document.getElementById("highscore").textContent = "최고 점수: " + highScore;
 
-    let gameRunning = false;
-    let fruits = [];
-    let dropping = null;
-    let mouseX = canvas.width / 2;
-    let score = 0;
-    let highScore = parseInt(localStorage.getItem("highScore") || "0");
+const GRAVITY_BASE = 0.05;
 
-    const fruitTypes = [
-      { name: "체리", color: "#ff4d6d", r: 12, gravity: 0.25, score: 1 },
-      { name: "딸기", color: "#ff6384", r: 18, gravity: 0.3, score: 2 },
-      { name: "포도", color: "#a855f7", r: 26, gravity: 0.35, score: 4 },
-      { name: "사과", color: "#ef4444", r: 35, gravity: 0.4, score: 8 },
-      { name: "레몬", color: "#fde047", r: 45, gravity: 0.45, score: 16 },
-      { name: "멜론", color: "#86efac", r: 55, gravity: 0.5, score: 32 },
-      { name: "수박", color: "#16a34a", r: 65, gravity: 0.55, score: 64 },
-      { name: "파인", color: "#facc15", r: 75, gravity: 0.6, score: 100 },
-      { name: "복숭아", color: "#fb7185", r: 85, gravity: 0.65, score: 200 },
-      { name: "망고", color: "#fbbf24", r: 95, gravity: 0.7, score: 400 },
-      { name: "용과", color: "#ec4899", r: 110, gravity: 0.75, score: 800 },
-      { name: "두리안", color: "#84cc16", r: 130, gravity: 0.8, score: 1600 }
-    ];
+const fruitTypes = [
+  {name:"체리", color:"#ff4d4d", r:10, next:1},
+  {name:"딸기", color:"#ff6b81", r:15, next:2},
+  {name:"포도", color:"#9b59b6", r:20, next:3},
+  {name:"사과", color:"#e74c3c", r:25, next:4},
+  {name:"레몬", color:"#f9ca24", r:30, next:5},
+  {name:"멜론", color:"#27ae60", r:35, next:6},
+  {name:"수박", color:"#2ecc71", r:45, next:7},
+  {name:"파인애플", color:"#f1c40f", r:55, next:8},
+  {name:"코코넛", color:"#8e5c42", r:65, next:9},
+  {name:"망고", color:"#f39c12", r:75, next:10},
+  {name:"복숭아", color:"#ffb6b9", r:85, next:11},
+  {name:"용과", color:"#ff4ecb", r:95, next:12},
+  {name:"자몽", color:"#ff7675", r:105, next:13},
+  {name:"아보카도", color:"#2e8b57", r:115, next:14},
+  {name:"황금수박", color:"#ffd700", r:130, next:null}
+];
 
-    class Fruit {
-      constructor(x, y, type) {
-        this.x = x;
-        this.y = y;
-        this.type = type;
-        this.r = type.r;
-        this.dy = 0;
-      }
-      draw() {
-        ctx.beginPath();
-        ctx.arc(this.x, this.y, this.r, 0, Math.PI * 2);
-        ctx.fillStyle = this.type.color;
-        ctx.fill();
-        ctx.strokeStyle = "#fff";
-        ctx.lineWidth = 2;
-        ctx.stroke();
-        ctx.fillStyle = "#000";
-        ctx.font = "bold 14px sans-serif";
-        ctx.textAlign = "center";
-        ctx.fillText(fruitTypes.indexOf(this.type) + 1, this.x, this.y + 5);
-      }
-      update() {
-        this.dy += this.type.gravity;
-        this.y += this.dy;
+let fruits = [];
+let current = createFruit();
 
-        if (this.y + this.r > canvas.height) {
-          this.y = canvas.height - this.r;
-          this.dy *= -0.3;
-        }
+function createFruit(typeIndex = 0, x = canvas.width/2, y = 60) {
+  const f = fruitTypes[typeIndex];
+  return {
+    ...f,
+    x,
+    y,
+    vy: 0,
+    isStatic: false
+  };
+}
 
-        if (this.x - this.r < 0) this.x = this.r;
-        if (this.x + this.r > canvas.width) this.x = canvas.width - this.r;
+canvas.addEventListener("click", () => {
+  fruits.push(current);
+  current = createFruit(Math.floor(Math.random()*3)); // 초반엔 작은 과일만
+});
+
+function update() {
+  ctx.clearRect(0,0,canvas.width,canvas.height);
+
+  // 과일 표시
+  for (let f of fruits) {
+    if (!f.isStatic) {
+      // 중력 (크기 커질수록 10배 강화)
+      const g = GRAVITY_BASE * (1 + f.r / 10);
+      f.vy += g;
+      f.y += f.vy;
+      if (f.y + f.r > canvas.height - 10) {
+        f.y = canvas.height - 10 - f.r;
+        f.vy = 0;
+        f.isStatic = true;
       }
     }
+  }
 
-    function spawnNewFruit() {
-      const rand = Math.random() < 0.9 ? 0 : 1; 
-      dropping = new Fruit(mouseX, 100, fruitTypes[rand]);
-    }
-
-    canvas.addEventListener("mousemove", e => {
-      const rect = canvas.getBoundingClientRect();
-      mouseX = e.clientX - rect.left;
-      if (dropping) dropping.x = mouseX;
-    });
-
-    canvas.addEventListener("click", () => {
-      if (!gameRunning || !dropping) return;
-      fruits.push(dropping);
-      dropping = null;
-      setTimeout(spawnNewFruit, 500);
-    });
-
-    function resetGame() {
-      fruits = [];
-      dropping = null;
-      score = 0;
-      gameRunning = true;
-      startBtn.style.display = "none";
-      spawnNewFruit();
-      requestAnimationFrame(loop);
-    }
-
-    function updateScore(points) {
-      score += points;
-      if (score > highScore) {
-        highScore = score;
-        localStorage.setItem("highScore", highScore);
-      }
-      scoreboard.innerHTML = `점수: ${score}<br>최고점수: ${highScore}`;
-    }
-
-    function checkCollision(a, b) {
+  // 충돌 항상 검사
+  for (let i=0;i<fruits.length;i++) {
+    for (let j=i+1;j<fruits.length;j++) {
+      const a = fruits[i];
+      const b = fruits[j];
       const dx = a.x - b.x;
       const dy = a.y - b.y;
-      const dist = Math.hypot(dx, dy);
-      return dist < a.r + b.r;
-    }
-
-    function mergeFruits() {
-      for (let i = 0; i < fruits.length; i++) {
-        for (let j = i + 1; j < fruits.length; j++) {
-          const a = fruits[i], b = fruits[j];
-          if (a.type === b.type && checkCollision(a, b)) {
-            const idx = fruitTypes.indexOf(a.type);
-            if (idx < fruitTypes.length - 1) {
-              const nx = (a.x + b.x) / 2;
-              const ny = (a.y + b.y) / 2;
-              fruits.splice(j, 1);
-              fruits.splice(i, 1);
-              fruits.push(new Fruit(nx, ny, fruitTypes[idx + 1]));
-              updateScore(a.type.score);
-            }
-            return;
-          }
+      const dist = Math.sqrt(dx*dx + dy*dy);
+      if (dist < a.r + b.r) {
+        // 충돌 처리
+        const overlap = (a.r + b.r) - dist;
+        const nx = dx / dist;
+        const ny = dy / dist;
+        a.x += nx * overlap/2;
+        a.y += ny * overlap/2;
+        b.x -= nx * overlap/2;
+        b.y -= ny * overlap/2;
+        // 합성
+        if (a.name === b.name && a.next != null) {
+          const newF = createFruit(a.next, (a.x+b.x)/2, (a.y+b.y)/2);
+          newF.vy = 0;
+          fruits.splice(j,1);
+          fruits.splice(i,1,newF);
+          score += a.r * 2;
+          document.getElementById("score").textContent = "점수: " + score;
         }
       }
     }
+  }
 
-    function loop() {
-      if (!gameRunning) return;
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-
-      for (let f of fruits) f.update();
-
-      // 충돌 감속 (뚫기 방지)
-      for (let i = 0; i < fruits.length; i++) {
-        for (let j = i + 1; j < fruits.length; j++) {
-          const a = fruits[i], b = fruits[j];
-          const dx = a.x - b.x;
-          const dy = a.y - b.y;
-          const dist = Math.hypot(dx, dy);
-          const minDist = a.r + b.r;
-          if (dist < minDist) {
-            const overlap = (minDist - dist) / 2;
-            const nx = dx / dist;
-            const ny = dy / dist;
-            a.x += nx * overlap;
-            a.y += ny * overlap;
-            b.x -= nx * overlap;
-            b.y -= ny * overlap;
-            a.dy *= 0.98;
-            b.dy *= 0.98;
-          }
-        }
-      }
-
-      mergeFruits();
-
-      for (let f of fruits) f.draw();
-      if (dropping) dropping.draw();
-
-      // ✅ 수정된 게임오버 조건: 화면 맨 위 닿으면 종료
-      if (fruits.some(f => f.y - f.r < 0)) {
-        gameRunning = false;
-        startBtn.style.display = "block";
-        startBtn.textContent = "💀 다시 시작";
-      }
-
-      requestAnimationFrame(loop);
+  // 게임오버 (천장 닿으면)
+  for (let f of fruits) {
+    if (f.y - f.r < 0) {
+      gameOver();
+      return;
     }
+  }
 
-    startBtn.addEventListener("click", resetGame);
-    scoreboard.innerHTML = `점수: 0<br>최고점수: ${highScore}`;
-  </script>
+  // 현재 과일 표시
+  ctx.beginPath();
+  ctx.arc(current.x, current.y, current.r, 0, Math.PI*2);
+  ctx.fillStyle = current.color;
+  ctx.fill();
+  ctx.closePath();
+  ctx.fillStyle = "#000";
+  ctx.font = "12px bold";
+  ctx.fillText(fruitTypes.indexOf(fruitTypes.find(t=>t.name===current.name)), current.x-3, current.y+3);
+
+  // 모든 과일 표시
+  for (let f of fruits) {
+    ctx.beginPath();
+    ctx.arc(f.x, f.y, f.r, 0, Math.PI*2);
+    ctx.fillStyle = f.color;
+    ctx.fill();
+    ctx.closePath();
+    ctx.fillStyle = "#000";
+    ctx.font = "12px bold";
+    ctx.fillText(fruitTypes.indexOf(fruitTypes.find(t=>t.name===f.name)), f.x-3, f.y+3);
+  }
+
+  requestAnimationFrame(update);
+}
+function gameOver() {
+  ctx.fillStyle = "rgba(0,0,0,0.5)";
+  ctx.fillRect(0,0,canvas.width,canvas.height);
+  ctx.fillStyle = "#fff";
+  ctx.font = "28px bold";
+  ctx.fillText("게임 오버!", canvas.width/2 - 70, canvas.height/2);
+  ctx.fillText("점수: " + score, canvas.width/2 - 50, canvas.height/2 + 40);
+  if (score > highScore) {
+    highScore = score;
+    localStorage.setItem("highScore", score);
+  }
+  document.getElementById("highscore").textContent = "최고 점수: " + highScore;
+  setTimeout(()=>location.reload(),2000);
+}
+update();
+</script>
 </body>
 </html>
